# narcissist

./: Cargo.toml  TODO.md  garuda-setup.sh
.github/workflows/: testing.yml
src/: builtin.rs  cli.rs  command_set.rs  lib.rs  main.rs  package.rs  package_file.rs  package_installer.rs  runner.rs  specification.rs
src/builtin/: install.rs  is_installed.rs
src/cli/: install.rs  install_all.rs
src/command/: command_map.rs
src/command_set/: install.rs  is_installed.rs
src/runner/: install.rs  is_installed.rs
src/specification/: command.rs  command_set.rs  package.rs
src/specification/command/: command_map.rs
tests/: package_file_tests.rs
