[package]
name = "stromboli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
# colored = { version = "2.1.0", features = ["no-color"] }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.20"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }
