[package]
name = "narcissist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
target-lexicon = { version = "0.12.12", features = ["serde_support"] }
toml = "0.8.8"
url = { version = "2.5.0", features = ["serde"] }
